signup page form alignment fixes

--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -194,6 +194,7 @@ text-transform: uppercase; font-weight: 600; font-size: 1.2rem;}
     .call-section .callBtn{width:100% !important; margin:0 !important}
     .card-list-item .star-rating i{font-size: 1.8rem !important;}
     .card-list-item{padding: 0.650rem 0.5rem !important;}
+    .formLpRp{padding:0}
 
 }
 
@@ -208,6 +209,7 @@ text-transform: uppercase; font-weight: 600; font-size: 1.2rem;}
 
     .project-section .col-sm-6 { flex: 0 0 50%; max-width: 50%;}
     
+    
 }
 
 @media(min-width:1280px){
@@ -220,6 +222,7 @@ text-transform: uppercase; font-weight: 600; font-size: 1.2rem;}
     .hero-header{height: 85vh}
     .parallax-header form .form-control-textarea{background: #fff !important;}
     .project-section .col-sm-6 { flex: 0 0 50%; max-width: 50%;}
+    
 }
 
 @media(min-width:1280.99px){
@@ -237,6 +240,7 @@ text-transform: uppercase; font-weight: 600; font-size: 1.2rem;}
     .parallax-header form .form-control-textarea{background: #fff !important;}
     #parallax-world-of-ugg .parallax-header { padding-bottom: 100px !important; }
     .project-section .col-sm-6 { flex: 0 0 50%; max-width: 50%;}
+    .formLpRp{padding:0}
 
     /* .parallax-header .freequote-container .free-quote{position: absolute; top:70px; left:14rem !important} */
     
